Added sandbox details controller
