# docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  images.Image:
+  github_com_shopwareLabs_testenv-platform_api_handler_images.Image:
     properties:
       created_at:
         example: "2013-08-20T18:52:09.000Z"
@@ -44,19 +44,23 @@ definitions:
         example: success
         type: string
     type: object
-  sandboxes.ContainerInfo:
+  sandbox.SandboxInfo:
     properties:
+      container_id:
+        type: string
+      container_name:
+        type: string
       created_at:
         type: string
       id:
         type: string
       image:
         type: string
-      name:
-        type: string
       state:
         type: string
       status:
+        type: string
+      url:
         type: string
     type: object
   sandboxes.SandboxCreateRequest:
@@ -71,10 +75,10 @@ definitions:
   sandboxes.SandboxCreateResponse:
     properties:
       container_id:
-        example: sandbox-container-id
+        example: 9a7f95b73018432cb88ebed68046c59a4bed05b2abc809f6fbf39a1173c06ac9
         type: string
       container_name:
-        example: sandbox-container
+        example: sandbox-67777b4e-946f-4462-b689-3c608d2d7938
         type: string
       image:
         example: dockware/dev:6.6.8.2
@@ -82,11 +86,14 @@ definitions:
       message:
         example: Sandbox created successfully
         type: string
+      sandbox_id:
+        example: 67777b4e-946f-4462-b689-3c608d2d7938
+        type: string
       status:
         example: success
         type: string
       url:
-        example: https://sandbox-random.shopshredder.zion.mr-pixel.de
+        example: https://sandbox-67777b4e-946f-4462-b689-3c608d2d7938.shopshredder.zion.mr-pixel.de
         type: string
     type: object
   sandboxes.SandboxDeleteResponse:
@@ -129,7 +136,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/images.Image'
+              $ref: '#/definitions/github_com_shopwareLabs_testenv-platform_api_handler_images.Image'
             type: array
         "400":
           description: Bad Request
@@ -211,7 +218,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/images.Image'
+            $ref: '#/definitions/github_com_shopwareLabs_testenv-platform_api_handler_images.Image'
         "400":
           description: Bad Request
           schema:
@@ -232,7 +239,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/sandboxes.ContainerInfo'
+            $ref: '#/definitions/sandbox.SandboxInfo'
         "400":
           description: Bad Request
           schema:
@@ -275,7 +282,7 @@ paths:
       - application/json
       description: Removes a sandbox docker container
       parameters:
-      - description: Container ID
+      - description: Sandbox ID
         in: path
         name: id
         required: true
@@ -294,6 +301,33 @@ paths:
               type: string
             type: object
       summary: Remove Sandbox Environment
+      tags:
+      - Sandbox Management
+    get:
+      consumes:
+      - application/json
+      description: Get details about a sandbox environment
+      parameters:
+      - description: Sandbox ID
+        example: 67777b4e-946f-4462-b689-3c608d2d7938
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/sandbox.SandboxInfo'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Details about a Sandbox
       tags:
       - Sandbox Management
 swagger: "2.0"
